--- a/Fig2BDF.ROC_plot/Analysis2BDF_AUC_CI.Rmd
+++ b/Fig2BDF.ROC_plot/Analysis2BDF_AUC_CI.Rmd
@@ -28,6 +28,12 @@ BOLD_mean = extract_win_or_pay_mean(dataset_BOLD,dataset_y_attack,"BOLD_","win",
 FC_mean = extract_win_or_pay_mean(dataset_FC,dataset_y_attack,"FC_","win",FALSE,FALSE)
 INS_mean = extract_win_or_pay_mean(dataset_INS,dataset_y_attack,"WNS_","win",FALSE,FALSE)
 BINS_mean = extract_win_or_pay_mean(dataset_BINS,dataset_y_attack,"BNS_","win",FALSE,FALSE)
+
+data_INS_invest = INS_mean[,c(1,3:ncol(INS_mean))]
+data_BINS_invest = BINS_mean[,c(1,3:ncol(BINS_mean))]
+data_BOLD_invest = BOLD_mean[,c(1,3:ncol(BOLD_mean))]
+data_FC_invest = FC_mean[,c(1,3:ncol(FC_mean))]
+
 data_all_invest = cbind(INS_mean[,c(1,3:ncol(INS_mean))],BINS_mean[,3:ncol(BINS_mean)],BOLD_mean[,3:ncol(BOLD_mean)],FC_mean[,3:ncol(FC_mean)])
 data_INS_BINS_invest = cbind(INS_mean[,c(1,3:ncol(INS_mean))],BINS_mean[,3:ncol(BINS_mean)])
 data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(FC_mean)])
@@ -45,14 +51,31 @@ auc_bold_fc = auc_boot_cv(data_BOLD_FC_invest,5,"radial",1000,TRUE,'#ACACAC','da
 ```
 
 ### INS and BINS
-#### 5-fold
-```{r svm_invest_INS&BINS-5}
+```{r svm_invest_INS&BINS}
 auc_ins_bins = auc_boot_cv(data_INS_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot.png')
 ```
 
-#### leave one session
-```{r svm_invest_INS&BINS-1}
-auc_ins_bins = auc_boot_cv(data_INS_BINS_invest,30,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot_leave-one-session.png')
+```{r svm_invest_INS&BINS-1, include=FALSE}
+auc_ins_bins_1 = auc_boot_cv(data_INS_BINS_invest,30,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot_leave-one-session.png')
+```
+### BOLD
+```{r svm_invest_BOLD}
+auc_bold = auc_boot_cv(data_BOLD_invest,5,"radial",1000,TRUE,'#ACACAC','data_BOLD_invest_roc_plot.png')
+```
+
+### FC
+```{r svm_invest_FC}
+auc_fc = auc_boot_cv(data_FC_invest,5,"radial",1000,TRUE,'#ACACAC','data_FC_invest_roc_plot.png')
+```
+
+### INS
+```{r svm_invest_INS}
+auc_ins = auc_boot_cv(data_INS_invest,5,"radial",1000,TRUE,'#AD91C4','data_INS_invest_roc_plot.png')
+```
+
+### BINS
+```{r svm_invest_BINS}
+auc_bins = auc_boot_cv(data_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','data_BINS_invest_roc_plot.png')
 ```
 
 ## Compare model performance
