--- a/Fig2BDF.ROC_plot/Analysis2BDF_AUC_CI.Rmd
+++ b/Fig2BDF.ROC_plot/Analysis2BDF_AUC_CI.Rmd
@@ -42,21 +42,21 @@ data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(F
 ## Predicting win vs. lose
 ### All features
 ```{r svm_invest_all}
-auc_all = auc_boot_cv(data_all_invest,5,"radial",1000,TRUE,'#000000','data_all_invest_roc_plot.png')
+auc_all = auc_boot_cv2(data_all_invest,5,"radial",1000,TRUE,'#000000','data_all_invest_roc_plot.png')
 ```
 
 ### BOLD and FC
 ```{r svm_invest_BOLD&FC}
-auc_bold_fc = auc_boot_cv(data_BOLD_FC_invest,5,"radial",1000,TRUE,'#ACACAC','data_BOLD_FC_invest_roc_plot.png')
+auc_bold_fc = auc_boot_cv2(data_BOLD_FC_invest,5,"radial",1000,TRUE,'#ACACAC','data_BOLD_FC_invest_roc_plot.png', ci_span = 0.2)
 ```
 
 ### INS and BINS
 ```{r svm_invest_INS&BINS}
-auc_ins_bins = auc_boot_cv(data_INS_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot.png')
+auc_ins_bins = auc_boot_cv2(data_INS_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot.png', ci_span = 0.2)
 ```
 
 ```{r svm_invest_INS&BINS-1, include=FALSE}
-auc_ins_bins_1 = auc_boot_cv(data_INS_BINS_invest,30,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot_leave-one-session.png')
+auc_ins_bins_1 = auc_boot_cv2(data_INS_BINS_invest,30,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot_leave-one-session.png')
 ```
 ### BOLD
 ```{r svm_invest_BOLD}
