--- a/Fig2BDF.ROC_plot/Analysis2BDF_AUC_CI.Rmd
+++ b/Fig2BDF.ROC_plot/Analysis2BDF_AUC_CI.Rmd
@@ -8,7 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
-source("../utils/functions_library.R")
+source("../utils/functions_library.R") 
 load_packages(c("dplyr", "caret", "e1071","ggplot2", "pROC", "reshape2", "rstatix","pROC"))
 ```
 
@@ -42,17 +42,17 @@ data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(F
 ## Predicting win vs. lose
 ### All features
 ```{r svm_invest_all}
-auc_all = auc_boot_cv2(data_all_invest,5,"radial",1000,TRUE,'#000000','data_all_invest_roc_plot.png')
+auc_all = auc_boot_cv(data_all_invest,5,"radial",1000,TRUE,'#000000','data_all_invest_roc_plot.png')
 ```
 
 ### BOLD and FC
 ```{r svm_invest_BOLD&FC}
-auc_bold_fc = auc_boot_cv2(data_BOLD_FC_invest,5,"radial",1000,TRUE,'#ACACAC','data_BOLD_FC_invest_roc_plot.png', ci_span = 0.2)
+auc_bold_fc = auc_boot_cv(data_BOLD_FC_invest,5,"radial",1000,TRUE,'#ACACAC','data_BOLD_FC_invest_roc_plot.png')
 ```
 
 ### INS and BINS
 ```{r svm_invest_INS&BINS}
-auc_ins_bins = auc_boot_cv2(data_INS_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot.png', ci_span = 0.2)
+auc_ins_bins = auc_boot_cv(data_INS_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','data_INS_BINS_invest_roc_plot.png')
 ```
 
 ```{r svm_invest_INS&BINS-1, include=FALSE}
