--- a/Fig6ABCDEF.Generalization/Analysis5ABCDEF_Generalization.Rmd
+++ b/Fig6ABCDEF.Generalization/Analysis5ABCDEF_Generalization.Rmd
@@ -64,7 +64,7 @@ acc_wns_bns = svm_general_accuracy(data1_INS_BINS_invest,data2_INS_BINS_invest)
 ```
 ### AUC
 ```{r svm_auc_both}
-auc_wns_bns = svm_general_auc2(data1_INS_BINS_invest,data2_INS_BINS_invest,cond_col = "#FF7E79",filename = 'general_both_gender_roc_plot.png', ci_span = 0.5)
+auc_wns_bns = svm_general_auc(data1_INS_BINS_invest,data2_INS_BINS_invest,cond_col = "#5BB9E8",filename = 'general_both_gender_roc_plot.png')
 ```
 
 ### Permutation
@@ -84,8 +84,8 @@ print(p_perm)
 
 p <- ggplot(acc_gen_perm, aes(x = acc_perm, fill = as.factor(ci95))) +
     geom_histogram(colour = "#4C4C4C", bins = 33) + 
-    scale_fill_manual(values = c("white","#FF7E79"))+
-    geom_vline(aes(xintercept = acc_wns_bns[[1]]), color = "#FF7E79", linewidth = 2) + theme_classic()+xlim(0,1) + 
+    scale_fill_manual(values = c("white","#5BB9E8"))+
+    geom_vline(aes(xintercept = acc_wns_bns[[1]]), color = "#5BB9E8", linewidth = 3) + theme_classic()+xlim(0,1) + 
     labs(x = "Win-Lose Prediction Accuracy") + theme(text = element_text(size = 15),legend.position="none",axis.ticks.length=unit(-0.1, "cm"))
 print(p)
 ggsave("General_perm_both_gender.png", plot = p, width = 5, height = 4, dpi = 300)
