--- a/Supplement_analysis/S03_Permutation_control/Analysis_Pseudo-pair.Rmd
+++ b/Supplement_analysis/S03_Permutation_control/Analysis_Pseudo-pair.Rmd
@@ -35,5 +35,5 @@ print(acc_ins_bins)
 
 ### auc
 ```{r svm_invest_INS&BINS}
-auc_ins_bins = auc_boot_cv2(data_INS_BINS_invest,5,"radial",1000,TRUE,'#AD91C4','pseudo_data_INS_BINS_invest_roc_plot.png', ci_span = 0.5)
+auc_ins_bins = auc_boot_cv(data_INS_BINS_invest,5,"radial",1000,TRUE,'#5BB9E8','pseudo_data_INS_BINS_invest_roc_plot.png')
 ```
